--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
         >
           <input type="text" name="message" placeholder="Tell me something.." />
           <input type="email" name="email" placeholder="Email Address" />
+          <input type="hidden" name="_captcha" value="false">
           <input
             type="hidden"
             name="_next"
