Add Comunity Manager content

--- a/index.html
+++ b/index.html
@@ -106,18 +106,18 @@
             <div class="col-sm-7">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
+                  <h5 class="card-title">Community Manager Experience</h5>
                   <p class="card-text">
-                    With supporting text below as a natural lead-in to
-                    additional content.
+                    Logo Designe
                   </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="https://www.instagram.com/aberturas_hoy/?hl=es" class="btn btn-primary">See Instagram</a>
+                <a href="https://www.aberturashoy.com.ar" class="btn btn-primary">See Website</a>
                 </div>
               </div>
             </div>
             <div class="col-sm-5">
               <img
-                src="https://cdn.glitch.com/1349c62a-d878-4453-93fc-d27332c2dbea%2Ftest-picture-3061864_640.png?v=1630307386124"
+                src="https://cdn.glitch.com/1349c62a-d878-4453-93fc-d27332c2dbea%2FOpera%20Instant%C3%A1nea_2021-09-06_195010_www.instagram.com.png?v=1630950792754"
                 class="img-fluid"
                 alt="..."
               />
