+JAVA page (void) + ABAP page (void)

--- a/ABAP.html
+++ b/ABAP.html
@@ -36,16 +36,16 @@
               <a
                 style="font-family:'Fira Sans Extra Condensed'"
                 class="nav-link"
-                href="softwareprojects.html"
-                >Software Pojects</a
+                href="ABAP.html"
+                >ABAP</a
               >
             </li>
             <li class="nav-item">
               <a
                 style="font-family:'Fira Sans Extra Condensed'"
                 class="nav-link"
-                href="artportfolio.html"
-                >Art Portfolio</a
+                href="JAVA.html"
+                >JAVA</a
               >
             </li>
             <li class="nav-item">
