--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
               <a
                 style="font-family:'Fira Sans Extra Condensed'"
                 class="nav-link"
-                href="softwareprojects.html"
-                >Software Pojects</a
+                href="ABAP.html"
+                >ABAP</a
               >
             </li>
             <li class="nav-item">
               <a
                 style="font-family:'Fira Sans Extra Condensed'"
                 class="nav-link"
-                href="artportfolio.html"
-                >Art Portfolio</a
+                href="JAVA.html"
+                >JAVA</a
               >
             </li>
             <li class="nav-item">
@@ -69,8 +69,9 @@
     <section>
       <div class="container mt-5">
         <p style="font-size: x-large">
-          I'm a self-teaching student of programming and animation, passionate
-          about how to represent this world with equations
+          
+          <!--POSIBLE PRESENTACION-->
+          
         </p>
 
         <div class="row mt-5 mb-5 justify-content-center">
@@ -101,17 +102,27 @@
 
       <!–– TARJETAS ––>
       <section>
-        <div class="container mt-5 mb-5 justify-content-center align-items-center">
+        <div
+          class="container mt-5 mb-5 justify-content-center align-items-center"
+        >
           <div class="row">
             <div class="col-sm-7">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Community Manager Experience</h5>
                   <p class="card-text">
-                    Logo Designe
+                    Logo Design
                   </p>
-                  <a href="https://www.instagram.com/aberturas_hoy/?hl=es" class="btn btn-primary">See Instagram</a>
-                <a href="https://www.aberturashoy.com.ar" class="btn btn-primary">See Website</a>
+                  <a
+                    href="https://www.instagram.com/aberturas_hoy/?hl=es"
+                    class="btn btn-primary"
+                    >See Instagram</a
+                  >
+                  <a
+                    href="https://www.aberturashoy.com.ar"
+                    class="btn btn-primary"
+                    >See Website</a
+                  >
                 </div>
               </div>
             </div>
@@ -190,12 +201,11 @@
         id="contact"
       >
         <form
-          action="https://formsubmit.co/5cfb9dc41fc28ec0a76c4835fe3b23ce"
+          action="https://formsubmit.co/stefanialissa7@email.com"
           method="POST"
         >
           <input type="text" name="message" placeholder="Tell me something.." />
           <input type="email" name="email" placeholder="Email Address" />
-          <input type="hidden" name="_captcha" value="false">
           <input
             type="hidden"
             name="_next"
