--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
               <a
                 style="font-family:'Fira Sans Extra Condensed'"
                 class="nav-link"
-                href="ABAP.html"
+                href="https://github.com/StefaniaLissa?tab=repositories&q=ABAP&type=&language=&sort="
+				target="_blank" rel="noopener noreferrer"
                 >ABAP</a
               >
             </li>
@@ -44,7 +45,8 @@
               <a
                 style="font-family:'Fira Sans Extra Condensed'"
                 class="nav-link"
-                href="JAVA.html"
+                href="https://github.com/StefaniaLissa/My-JAVA-Progress"
+				target="_blank" rel="noopener noreferrer"
                 >JAVA</a
               >
             </li>
@@ -166,7 +168,7 @@
                     >See Instagram</a
                   >
                   <a
-                    href="https://www.aberturashoy.com.ar"
+                    href="https://www.aberturashoy.com"
                     class="btn btn-primary"
                     >See Website</a
                   >
